--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ body{
 
 .footer{
     height: 300px;
+    margin: 0px;
     margin-top: 50px;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -147,4 +148,49 @@ body{
     padding-bottom: 10px;
     position: fixed;
     float: right;
+}
+
+.gallerie{
+    display: grid;
+    grid-template-columns: 390px 390px 390px;
+    column-gap: 20px;
+    row-gap: 20px;
+    margin: 25px;
+    margin-left: 230px;
+}
+
+.gallerie-item{
+    background-color: rgb(219, 237, 245);
+    height: 220px;
+    text-align: center;
+    box-shadow: 5px 5px 15px #353434;
+}
+
+.gallerie-item :hover{
+    box-shadow: none;
+}
+
+.gallerie figcaption{
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5); /* Black see-through */
+    color: white;
+    width: 350px;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+  }
+
+.gallerie :nth-child(4){
+    border: #fff solid 3px ;
+    border-radius: 5px;
+}
+
+.gallerie :nth-child(5){
+    border: #fff solid 3px ;
+    border-radius: 20%;
+}
+
+.gallerie :nth-child(6){
+    border: #fff solid 3px ;
+
 }
