--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 body{
     background-image: linear-gradient(rgb(135, 199, 247), rgb(219, 240, 249));
     background-repeat: no-repeat;
@@ -34,11 +40,13 @@ body{
     color: rgb(249, 230, 234);
     padding: 10px;
 }
+
+.navigateur a:visited {
+	color: #040303;
+}
+
 .navigateur a:hover {
 	color: #fed0de;
-}
-.navigateur a:visited {
-	color: #fff;
 }
 
 .quote{
@@ -90,7 +98,6 @@ body{
 
 .footer{
     height: 300px;
-    margin: 0px;
     margin-top: 50px;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -156,41 +163,43 @@ body{
     column-gap: 20px;
     row-gap: 20px;
     margin: 25px;
-    margin-left: 230px;
-}
+    justify-content: center;}
 
 .gallerie-item{
     background-color: rgb(219, 237, 245);
     height: 220px;
     text-align: center;
     box-shadow: 5px 5px 15px #353434;
+    position: relative;
+    
 }
 
-.gallerie-item :hover{
-    box-shadow: none;
-}
-
-.gallerie figcaption{
-    background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.5); /* Black see-through */
+.overlay{
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    bottom: 0;    
     color: white;
-    width: 350px;
+    width: 390px;
     font-size: 20px;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
   }
 
-.gallerie :nth-child(4){
+.rond_image{
     border: #fff solid 3px ;
     border-radius: 5px;
 }
 
-.gallerie :nth-child(5){
+.arrondi_image{
     border: #fff solid 3px ;
     border-radius: 20%;
 }
 
-.gallerie :nth-child(6){
+.carre_image{
     border: #fff solid 3px ;
+
+}
+
+.gallerie-item :hover{
 
 }
