--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*
+Joaquim Sandler-Soussy, Matricule: 20308512
+Jules Routier, Matricule: 20294296
+*/
+
 *{
     margin: 0px;
     padding: 0px;
@@ -10,68 +15,9 @@ body{
     background-attachment: fixed;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-  }
-
-
-.front_page_image{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 60px;
-    margin-bottom: 50px;
-    
 }
 
-.title{
-    text-align: center;
-    margin-top: 70px;
-    margin-bottom: 70px;
-    color: #fff;
-}
-
-.title_index{
-    text-align: center;
-    margin-top: 70px;
-    margin-bottom: 70px;
-    color: #000000;
-}
-
-.navigateur ul{
-	list-style-type: none;
-	margin-top: 40px;
-	text-align: center;
-    font-size: 27px;
-    margin-bottom: 20px;
-}
-
-.navigateur a{
-    text-decoration: none;
-    color: rgb(249, 230, 234);
-    padding: 10px;
-}
-
-.navigateur a:visited {
-	color: #040303;
-}
-
-.navigateur a:hover {
-	color: #fed0de;
-}
-
-.quote{
-    text-align: center;
-    border: solid 3px #fff;
-    margin: auto;
-    width: 50%;
-    padding: 20px;
-    margin-bottom: 60px;
-    margin-top: 40px;
-}
-
-.quote a{
-    text-decoration: underline;
-    color:#000 ;    
-}
+/* Classes design général */
 
 .corps{
     margin: auto;
@@ -103,7 +49,41 @@ body{
     border-radius: 15px;
     float: right;
     margin: 30px;
+
+
+}.title{
+    text-align: center;
+    margin-top: 70px;
+    margin-bottom: 70px;
+    color: #fff;
 }
+
+
+/* Navigateur */
+
+.navigateur ul{
+	list-style-type: none;
+	margin-top: 40px;
+	text-align: center;
+    font-size: 27px;
+    margin-bottom: 20px;
+}
+
+.navigateur a{
+    text-decoration: none;
+    color: rgb(249, 230, 234);
+    padding: 10px;
+}
+
+.navigateur a:visited {
+	color: #040303;
+}
+
+.navigateur a:hover {
+	color: #fed0de;
+}
+
+/* Footer */
 
 .footer{
     height: 300px;
@@ -143,6 +123,39 @@ body{
 
 }
 
+/* Index */
+
+.front_page_image{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+    margin-bottom: 50px;
+    
+}
+
+.title_index{
+    text-align: center;
+    margin-top: 70px;
+    margin-bottom: 70px;
+    color: #000000;
+}
+
+.quote{
+    text-align: center;
+    border: solid 3px #fff;
+    margin: auto;
+    width: 50%;
+    padding: 20px;
+    margin-bottom: 60px;
+    margin-top: 40px;
+}
+
+.quote a{
+    text-decoration: underline;
+    color:#000 ;    
+}
+
 .phrase_gras{
     font-weight: bold;
 }
@@ -165,6 +178,8 @@ body{
     position: fixed;
     float: right;
 }
+
+/* Gallerie */
 
 .gallerie{
     display: grid;
@@ -220,6 +235,8 @@ body{
     line-height: 30px;
 }
 
+/* Compétences */
+
 ul, ol{
     padding: 20px;
 }
@@ -228,7 +245,7 @@ li{
     padding: 5px;
 }
 
-.premiere_liste :first-child::first-letter{
+.premiere_lettre ::first-letter{
     font-weight: bold;
     font-size: 30px;
 }
@@ -241,36 +258,46 @@ li{
     border-radius: 8px;
 }
 
-.bulle_discu{
-    position: absolute;
-    top: 20px;
-    animation: glisse 6s ease-in-out infinite alternate, couleur 5s infinite;
+/* Contact */
+
+.bulle_discu rect,
+.bulle_discu polygon {
+    animation: colorChange 7s infinite alternate;
 }
 
-@keyframes glisse{
-    0%{
-        transform: translateX(0);
-    }
-    50%{
-        transform: translateX(100vw);
-    }
-    100%{
-        transform: translateX(0);
+@keyframes colorChange {
+    100% {
+        fill: #40e0d0;
     }
 }
 
-@keyframes couleur{
-    0% { fill: #f4b0b0;}
-    50% { fill: #fc7d77;}
-    100% { fill: #f60000;}
+.bulle_discu {
+    animation: glisse 7s infinite alternate;
+    margin: 20px;
+}
 
+@keyframes glisse {
+    0% {
+        transform: translateY(0vw);
+    }
+    100% {
+        transform: translateX(87vw);
+    }
+}
+
+
+.contact{
+    padding: 25px;
+    text-align: center;
+}
+
+.contact h3{
+    text-align: left;
 }
 
 .telephone{
     font-weight: bold;
-    color: orange;
-    padding: 25px;
-    text-align: center;
+    color: rgb(222, 145, 0);
 }
 
 .email_lien{
@@ -278,48 +305,21 @@ li{
     color: blue;
 }
 
-.réseau{
-    gap: 10px;
-    display: flex;
-}
-
-.icon_linkedin{
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
-    background-repeat: no-repeat;
+.github{
+    width: 60px;
+    height: 60px;
+    background: url(images/css_sprites.png) 0 0;
     display: inline-block;
-    background-image: url(images/icons8-linkedin-logo-50.png);
-
-}
-
-.icon_github{
-    width: 50px;
-    height: 50px;
+    margin-left: auto;
     margin-right: 10px;
-    background-repeat: no-repeat;
+
+}
+
+.linkedin{
+    width: 60px;
+    height: 60px;
+    background: url(images/css_sprites.png) -70px 0;
     display: inline-block;
-    background-image: url(images/icons8-github-50.png);
-}
-
-.svg_boite{
-    height: 150px;
-    width: 100vw;
-    position: relative;
-    overflow: hidden;
-    margin: 30px auto;
-    border: 2 px solid white;
-    border-radius: 8px;
-    justify-content: start;
-    padding: 20px;
-    align-items: center;
-    display: flex;
-}
-
-.image_contact{
-    width: 150px;
-    height: auto;
-    margin-top: 10px;
-    border-radius: 10px;
-}
+    margin-right: auto;
+} 
 
